--- a/portfolio/drawings.css
+++ b/portfolio/drawings.css
@@ -8,13 +8,52 @@ body{
     background-size: cover;
 }
 
-.navbar{
+/* NAV BEGIN */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  .navwrap{
+    z-index: 50;
+    width: 100%;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: #fff;
+  }
+  
+  .gradient-bar{
+    width: 100%;
+    height: 5px;
+    background: linear-gradient(-45deg,#99E1E5, #F4BFBF);
+    background-size: 400% 400%;
+    -webkit-animation: gradbar 15s ease infinite;
+    -moz-animation: gradbar 15s ease infinite;
+    animation: gradbar 15s ease infinite;
+  }
+  
+  @keyframes gradbar {
+  0% {background-position: 0% 50%}
+  50% {background-position: 100% 50%}
+  100% {background-position: 0% 50%}
+  }
+  
+  @-moz-keyframes gradbar {
+  0% {background-position: 0% 50%}
+  50% {background-position: 100% 50%}
+  100% {background-position: 0% 50%}
+  }
+  
+  .navbar{
+    margin-top:5px;
     background-color: whitesmoke;
     overflow: hidden;
     position: fixed;
     width: 100%;
-    z-index: 100;
-
+    z-index: 50;
+  
     display:flex;
     justify-content: space-evenly;
     color: black;
@@ -22,44 +61,31 @@ body{
     text-decoration: none;
     top: -100px;
     transition: top 0.3s;
-
-    border: solid black 3px;
-}
-
-.myname a, .navbar a{
-    font-size: 15px;
+  }
+  
+  .myname a, .navbar a:not(.skip){
+    font-size: 18px;
     cursor: pointer;
-    /* font-family: 'Courier New', Courier, monospace; */
-    padding: 1.5%;
-    
-}
-
-.navbar a:not(.myname){
+    padding: 1%;
+  }
+  
+  .navbar a:not(.myname){
     padding-left: 7%;
     padding-right: 7%;
-    /* border-right: solid 3px white;
-    border-left: solid 3px white; */
-}
-
-.navbar a:hover:not(.myname){
-    /* border-color: black; */
-    color: white;
-    background: black;
-    /* background: rgba(255, 199, 185, 0.568); */
-}
+    transition: background-color 0.3s ease-out;
+  }
+  
+  .navbar a:hover:not(.myname,.skip){
+    color: whitesmoke;
+    background-color: black;
+  }
+  /* NAV END */
 
 /* NAVBAR TEST */
 
 .title{
     text-align: center;
-    /* padding-top: 30%;
-    padding-bottom: 40%; 
-    background-image: url(./other/temp\ cover.png);
-    background-repeat: no-repeat;
-    background-size: cover;*/
-    border: solid 10px rgb(233, 201, 180);
-    border-bottom: solid 10px whitesmoke;
-    border-top: solid 10px whitesmoke; 
+    border-bottom: solid whitesmoke 10px;
 
     padding-top: 2%;
     padding-bottom: 2%;
@@ -96,7 +122,7 @@ body{
 .name{
     padding-top: 2%;
     padding-bottom: 2%;
-    background-color: rgba(248, 221, 203, 0.596); 
+    /* background-color: rgba(248, 221, 203, 0.596);  */
 }
 
 .artwork{
@@ -106,6 +132,8 @@ body{
     grid-template-columns: auto auto auto;
     padding: 10px;
     border: solid 10px whitesmoke;
+    border-left: none;
+    border-right: none; 
     
 }
 
